# AI-Web-Design-Crew-Multi-Agent-Collaboration-with-CrewAI

./: README.md  pyproject.toml
output/: app.py  app.py_design.md  frontend  test_app.py.py
src/web_designers/: crew.py  main.py
src/web_designers/config/: agents.yaml  tasks.yaml
